--- a/hardskills/modulohtml/aula23/gamedev.html
+++ b/hardskills/modulohtml/aula23/gamedev.html
@@ -3,7 +3,6 @@
         <div>
             <h2>Desenvolvimento de Games</h2>
             <p>Tenho como passa-tempo programar e estudar desenvolvimento de jogos e Unity Engine.</p>
-            <i>"O aprendizado vem antes do resultado."</i>
         </div>
         <div>
             <hr>
@@ -19,42 +18,74 @@
                 <p>Em meu tempo livre criar bibliotecas com sistemas que ajudem outras pessoas a criarem seus jogos.</p>
             </div>
             <hr>
-            <div>
-                <h3>Habilidades <strong>Unity</strong></h3>
-                <table>
-                    <tr class="star5">
-                        <td>Unity Editor</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star4">
-                        <td>CSharp</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star4">
-                        <td>Shader Graph</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star4">
-                        <td>Animator</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star5">
-                        <td>Scriptable Objects</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star2">
-                        <td>Data-Oriented Technology Stack</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr class="star1">
-                        <td>Networking</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                </table>
+            <div class="grade">
+                <span>
+                    <div>
+                        <span class="text-icon">
+                            <h3>Habilidades <strong>Unity</strong></h3>
+                            <img src="images/icons/icon-unity.png" />
+                        </span>
+                        <div class="list">
+                            <span>
+                                <h4>Unity Engine</h4>
+                                <span class="star5">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
+                            </span>
+                            <span>
+                                <h4>Unity Editor</h4>
+                                <span class="star4">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
+                            </span>
+                            <span>
+                                <h4>CSharp</h4>
+                                <span class="star4">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
+                            </span>
+                            <span>
+                                <h4>Networking</h4>
+                                <span class="star2">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
+                            </span>
+                            <span>
+                                <h4>Artificial Inteligence</h4>
+                                <span class="star3">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </span>
             </div>
             <hr>
             <div>
-                <h3>Portifolio</h3>
+                <span class="text-icon">
+                    <h3>Portifolio</h3>
+                    <img src="images/icons/icon-itchio.png" />
+                </span>
                 <span>
                     <a href="http://" target="_blank">O Cair da Noite</a> 
                     | 
