--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -29,10 +29,10 @@
         </main>
         <footer>
             <div>
-                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-instagram.png"/></a>
-                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-whatsapp.png"/></a>
+                <a href="https://www.instagram.com/luisgustavoczp/" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-instagram.png"/></a>
+                <a href="https://wa.me/45933002944" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-whatsapp.png"/></a>
                 <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-linkedin.png"/></a>
-                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-email.png"/></a>
+                <a href="mailto:luisgustavoczp@gmail.com?subject=Sobre%20o%20Curriculo" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-email.png"/></a>
             </div>
             <hr>
             <span>
