--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -6,7 +6,7 @@
         </div>
         <div>
             <hr>
-            <div class="list">
+            <div>
                 <h3>Formação</h3>
                 <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
                 <p><strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
@@ -14,91 +14,95 @@
             <hr>
             <div>
                 <h3>Objetivos</h3>
-                <div class="list">
-                    <p>Aplicar a tecnologia na vida da pessoas</p>
-                    <p>Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</p>
-                </div>
+                <p>Aplicar a tecnologia na vida da pessoas</p>
+                <p>Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</p>
             </div>
             <hr>
             <div class="grade">
-                <div>
-                    <h3>Habilidades <strong>Front-End</strong></h3>
-                    <div class="list">
-                        <span>
-                            <img src="images/icons/icon-html.png" title="HTML" />
-                            <span class="star4">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                <span>
+                    <div>
+                        <h3>Habilidades <strong>Front-End</strong></h3>
+                        <div class="list">
+                            <span>
+                                <img src="images/icons/icon-html.png" title="HTML" />
+                                <span class="star4">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
-                        <span>
-                            <img src="images/icons/icon-css.png" title="CSS" />
-                            <span class="star3">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                            <span>
+                                <img src="images/icons/icon-css.png" title="CSS" />
+                                <span class="star3">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
-                        <span>
-                            <img src="images/icons/icon-js.png" title="JavaScript" />
-                            <span class="star2">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                            <span>
+                                <img src="images/icons/icon-js.png" title="JavaScript" />
+                                <span class="star2">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <h3>Habilidades <strong>Back-End</strong></h3>
-                    <div class="list">
-                        <span>
-                            <img src="images/icons/icon-web.png" title="Servidores" />
-                            <span class="star1">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                    <div>
+                        <h3>Habilidades <strong>Back-End</strong></h3>
+                        <div class="list">
+                            <span>
+                                <img src="images/icons/icon-web.png" title="Servidores" />
+                                <span class="star1">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
-                        <span>
-                            <img src="images/icons/icon-nodejs.png" title="NodeJS" />
-                            <span class="star0">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                            <span>
+                                <img src="images/icons/icon-nodejs.png" title="NodeJS" />
+                                <span class="star0">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
-                        <span>
-                            <img src="images/icons/icon-postgree.png" title="Postgree" />
-                            <span class="star0">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                            <span>
+                                <img src="images/icons/icon-postgree.png" title="Postgree" />
+                                <span class="star0">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                    <img src="images/emote_star.png">
+                                </span>
                             </span>
-                        </span>
+                        </div>
                     </div>
-                </div>
+                </span>
+                
             </div>
             <hr>
             <div>
-                <h3>Portifolio</h3>
+                <span class="text-icon">
+                    <h3>Portifolio</h3>
+                    <img src="images/icons/icon-github.png" />
+                </span>
                 <span>
-                    <a href="http://" target="_blank">Repositorio AlphaEdTech</a> 
+                    <a href="https://github.com/LuisGustavoCZP/my_first_steps" target="_blank">Repositorio AlphaEdTech</a> 
                     | 
-                    <a href="http://" target="_blank">Repositorio IFPR</a>
+                    <a href="https://github.com/LuisGustavoCZP/IFPR-Desenvolvimento-Web-I" target="_blank">Repositorio IFPR</a>
                 </span>
             </div>
         </div>
