--- a/hardskills/modulohtml/aula23/gamedev.html
+++ b/hardskills/modulohtml/aula23/gamedev.html
@@ -7,13 +7,6 @@
         <div>
             <hr>
             <div>
-                <h3>Cursos</h3>
-                <p><strong>Learn Unity's Enity Component System</strong>, Penny de Byl. <i>(Udemy)</i></p>
-                <p><strong>The Begginer's Guide to Artificial Inteligence in Unity</strong>, Penny de Byl. <i>(Udemy)</i></p>
-                <p><strong>Advanced IA For Games with Goal-Oriented Action Planning</strong>, Penny de Byl. <i>(Udemy)</i></p>
-            </div>
-            <hr>
-            <div>
                 <h3>Objetivos</h3>
                 <p>Em meu tempo livre criar bibliotecas com sistemas que ajudem outras pessoas a criarem seus jogos.</p>
             </div>
@@ -23,57 +16,57 @@
                     <div>
                         <span class="text-icon">
                             <h3>Habilidades <strong>Unity</strong></h3>
-                            <img src="images/icons/icon-unity.png" />
+                            <img src="images/logos/icon-unity.png" />
                         </span>
                         <div class="list">
                             <span>
                                 <h4>Unity Engine</h4>
                                 <span class="star5">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
                                 <h4>Unity Editor</h4>
                                 <span class="star4">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
                                 <h4>CSharp</h4>
                                 <span class="star4">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
                                 <h4>Networking</h4>
                                 <span class="star2">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
                                 <h4>Artificial Inteligence</h4>
                                 <span class="star3">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                         </div>
@@ -82,14 +75,21 @@
             </div>
             <hr>
             <div>
+                <h3>Cursos</h3>
+                <p><strong>Learn Unity's Enity Component System</strong>, Penny de Byl. <i>(Udemy)</i></p>
+                <p><strong>The Begginer's Guide to Artificial Inteligence in Unity</strong>, Penny de Byl. <i>(Udemy)</i></p>
+                <p><strong>Advanced IA For Games with Goal-Oriented Action Planning</strong>, Penny de Byl. <i>(Udemy)</i></p>
+            </div>
+            <hr>
+            <div>
                 <span class="text-icon">
                     <h3>Portifolio</h3>
-                    <img src="images/icons/icon-itchio.png" />
+                    <img src="images/logos/icon-itchio.png" />
                 </span>
                 <span>
-                    <a href="http://" target="_blank">O Cair da Noite</a> 
-                    | 
-                    <a href="http://" target="_blank">Spaciu Inverdes</a>
+                    <a href="https://luiszanetti.itch.io/o-cair-da-noite" target="_blank">O Cair da Noite</a>
+                    |
+                    <a href="https://luiszanetti.itch.io/aligacao" target="_blank">A Ligação</a>
                 </span>
             </div>
         </div>
