--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -7,12 +7,6 @@
         <div>
             <hr>
             <div>
-                <h3>Formação</h3>
-                <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
-                <p><strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
-            </div>
-            <hr>
-            <div>
                 <h3>Objetivos</h3>
                 <p>Aplicar a tecnologia na vida da pessoas</p>
                 <p>Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</p>
@@ -24,33 +18,33 @@
                         <h3>Habilidades <strong>Front-End</strong></h3>
                         <div class="list">
                             <span>
-                                <img src="images/icons/icon-html.png" title="HTML" />
+                                <img src="images/logos/icon-html.png" title="HTML" />
                                 <span class="star4">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
-                                <img src="images/icons/icon-css.png" title="CSS" />
+                                <img src="images/logos/icon-css.png" title="CSS" />
                                 <span class="star3">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
-                                <img src="images/icons/icon-js.png" title="JavaScript" />
+                                <img src="images/logos/icon-js.png" title="JavaScript" />
                                 <span class="star2">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                         </div>
@@ -59,33 +53,33 @@
                         <h3>Habilidades <strong>Back-End</strong></h3>
                         <div class="list">
                             <span>
-                                <img src="images/icons/icon-web.png" title="Servidores" />
+                                <img src="images/logos/icon-web.png" title="Servidores" />
                                 <span class="star1">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
-                                <img src="images/icons/icon-nodejs.png" title="NodeJS" />
+                                <img src="images/logos/icon-nodejs.png" title="NodeJS" />
                                 <span class="star0">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                             <span>
-                                <img src="images/icons/icon-postgree.png" title="Postgree" />
+                                <img src="images/logos/icon-postgree.png" title="Postgree" />
                                 <span class="star0">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
-                                    <img src="images/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
+                                    <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
                         </div>
@@ -95,9 +89,15 @@
             </div>
             <hr>
             <div>
+                <h3>Formação</h3>
+                <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
+                <p><strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
+            </div>
+            <hr>
+            <div>
                 <span class="text-icon">
                     <h3>Portifolio</h3>
-                    <img src="images/icons/icon-github.png" />
+                    <img src="images/logos/icon-github.png" />
                 </span>
                 <span>
                     <a href="https://github.com/LuisGustavoCZP/my_first_steps" target="_blank">Repositorio AlphaEdTech</a> 
