--- a/hardskills/modulohtml/aula23/home.html
+++ b/hardskills/modulohtml/aula23/home.html
@@ -12,10 +12,10 @@
             <p>Hobby de <strong>Desenvolvimento de Games</strong> com Unity.</p>
         </div>
         <div>
-            <p>Curioso, proativo, entusiasta de ciência a jogos em seus mais variados aspectos, da teoria á prática.</p>
+            <p>Curioso, proativo, entusiasta de ciência e jogos em seus mais variados aspectos, da teoria á prática.</p>
             <p>Em constante evolução de <strong>SoftSkills</strong> e <strong>HardSkills</strong>.</p>
             <p>Tenho alguma experiência na área de <strong>Game Dev</strong>.</p>
-            <p><i>"Não acredito em impossível. Mesmo que seja improvável, ainda é possível."</i> - Eu mesmo</p>
+            <p><i>"Não acredito em impossível, mesmo que seja improvável"</i> - Eu mesmo</p>
             <hr>
         </div>
         <a href="https://luisgustavoczp.github.io/IFPR-Desenvolvimento-Web-I/" target="_blank">GitPage IFPR</a>
