--- a/hardskills/modulohtml/aula23/myself.html
+++ b/hardskills/modulohtml/aula23/myself.html
@@ -27,44 +27,44 @@
                 <div>
                     <h3 class="skills-header">SoftSkills</h3>
                     <div class="list">
-                        <span>
+                        <span class="item">
                             <h4>Autoconhecimento</h4>
                             <span class="star3">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span>
                             <h4>Criatividade</h4>
                             <span class="star5">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span>
                             <h4>Inteligencia Emocional</h4>
                             <span class="star4">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span>
                             <h4>Análise Cinésica</h4>
                             <span class="star2">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                     </div>
@@ -75,41 +75,41 @@
                         <span>
                             <h4>Edição de Imagens</h4>
                             <span class="star3">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span>
                             <h4>Design</h4>
                             <span class="star2">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span>
                             <h4>Modelagem 3D</h4>
                             <span class="star3">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                         <span class="star2">
                             <h4>Animação 3D</h4>
                             <span>
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
-                                <img src="images/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
+                                <img src="images/icons/emote_star.png">
                             </span>
                         </span>
                     </div>
